changes text color to green

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,14 @@
 <html>
-<head></head>
+<head>
+<title>Hello Pokemon</title>
+<style>
+	body{
+		color: green;
+	}
+</style>
+</head>
 <body>
 	<h1>Body of web page</h1>
+	
 </body
 </html>
