--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,6 @@
 	
 	<h3>Waaahh!!Ah cool feature eh?</h3>
 	<h4>eh ipersonalize daw to..tatanggalin din daw naman to mamaya..</h4>
-	<h4>Lorem Ipsum daw sabi ni sir ang idagdag</h4>
-	<h5 style="color:purple;">This text is in purple..yey!!</h5>
+	<h4 style="color:purple">Purple Text Ito</h4>
 </body
 </html>
